# jupyteach-jupyterlite-contents

./: .gitignore  .jupyterlite.doit.db  .prettierignore  LICENSE  README.md  RELEASE.md  devlog.md  dodo.py  environment.yml  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: build.yml  check-release.yml
_output/: jupyter-lite.json
_output/extensions/@jupyteach/jupyterlite-contents/: build_log.json  package.json
_output/extensions/@jupyteach/jupyterlite-contents/static/: lib_index_js.ba4b3fa335edae72b764.js  lib_index_js.ba4b3fa335edae72b764.js.map  node_modules_jupyterlite_localforage_lib_index_js.0b2f857e60e405dab44a.js  node_modules_jupyterlite_localforage_lib_index_js.0b2f857e60e405dab44a.js.map  remoteEntry.a285116f7cfa04d4ebc7.js  remoteEntry.a285116f7cfa04d4ebc7.js.map  style.js  style_index_js.50283c059197928d11da.js  style_index_js.50283c059197928d11da.js.map  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-72eba1.12a0ba14f0b27125dc7c.js  vendors-node_modules_css-loader_dist_runtime_api_js-node_modules_css-loader_dist_runtime_cssW-72eba1.12a0ba14f0b27125dc7c.js.map  vendors-node_modules_jupyterlite_contents_lib_index_js.d2c60f4ca0a1aac60b07.js  vendors-node_modules_jupyterlite_contents_lib_index_js.d2c60f4ca0a1aac60b07.js.map
binder/: environment.yml  postBuild
jupyteach_jupyterlite_contents/: __init__.py
src/: contents.ts  index.ts
