[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab>=3.5.0,<4.0.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyteach_jupyterlite_contents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyteach_jupyterlite_contents/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyteach_jupyterlite_contents/labextension" = "share/jupyter/labextensions/@jupyteach/jupyterlite-contents"
"install.json" = "share/jupyter/labextensions/@jupyteach/jupyterlite-contents/install.json"

# [tool.hatch.build.hooks.version]
# path = "jupyteach_jupyterlite_contents/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyteach_jupyterlite_contents/labextension/package.json",
]
skip-if-exists = ["jupyteach_jupyterlite_contents/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyteach_jupyterlite_contents/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
